Fix popup height on mobile

--- a/themes/dissent/static/css/mobile.css
+++ b/themes/dissent/static/css/mobile.css
@@ -168,18 +168,19 @@ a.button  {line-height:4rem;}
 .popup .speaker-img-container {height:auto;}
 .popup  button.close { right: -15px;top: -15px; }
 .popup > div{
-	top:5vh;
+	top:15vh;
 	left:5vw;
 	width:90vw;
-	height:90vh;
+	height:70vh;
 	padding:2vh 2vw 2vh 2vw;
 }
 .popup img.speaker-img { width:25vw; max-width:40vh; max-height:unset; }
 .popup .bio {	position:absolute ;bottom:0.5em;left: 1.2em;right:0.5em;top:38vw;overflow-y: auto; font-size:1em}
-@media screen and (orientation:landscape) {
-   .popup .bio {	top:27vw; font-size: 0.9em;}
-}
 .popup .featured-description .name {font-size:1em;}
+@media screen and (orientation:landscape) {
+	.popup > div{ top:2vh; height:96vh; }
+	.popup .bio {	top:27vw; font-size: 0.9em;}
+}
 
 
 button  {height:auto;font-size:0.8em;}
